Fixed padding for gap between footer

--- a/css/vox-populi/photos.css
+++ b/css/vox-populi/photos.css
@@ -1,6 +1,6 @@
 #vox-populi {
     margin: 0 auto;
-    padding: 2rem 2rem 0;
+    padding: 3rem;
     max-width: 1000px;
 }
 
